--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+3HW3sSaJARz93bNP0Ndq",
+      "authorship_tag": "ABX9TyPmdLnQaY6yqs0OvNT+AypS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
           "height": 17
         },
         "id": "sJOR-0hwlwr7",
-        "outputId": "aa48f72e-f23a-4feb-d301-66998133667e"
+        "outputId": "f0c26b32-6494-48d2-c676-8e80a0a398ea"
       },
       "execution_count": 1,
       "outputs": [
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "427d3fb1-8c6d-4c14-d806-6bf35b752205"
+        "outputId": "b1226a39-f0e4-4f23-e35c-a5241812f6d0"
       },
       "execution_count": 2,
       "outputs": [
@@ -162,7 +162,7 @@
       ],
       "metadata": {
         "id": "0A-YvvDpDl-1",
-        "outputId": "e115ea7a-0bd5-485c-a3be-429e694a166e",
+        "outputId": "3681b98d-fb7d-41af-891e-9cfac472e246",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -204,7 +204,7 @@
       ],
       "metadata": {
         "id": "imNthwCGdJTw",
-        "outputId": "31b4a389-4102-483b-cfb1-95c2975914a5",
+        "outputId": "e14f2e35-e980-43f5-be7c-ad9cb415d4e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -216,8 +216,8 @@
           "name": "stdout",
           "text": [
             "Downloading rock-paper-scissors-dataset.zip to /content\n",
-            " 96% 436M/452M [00:03<00:00, 180MB/s]\n",
-            "100% 452M/452M [00:03<00:00, 145MB/s]\n"
+            " 96% 436M/452M [00:04<00:00, 105MB/s]\n",
+            "100% 452M/452M [00:04<00:00, 114MB/s]\n"
           ]
         },
         {
@@ -287,7 +287,7 @@
       ],
       "metadata": {
         "id": "vSFRh8T8eP3G",
-        "outputId": "dd21408e-b7e9-4811-97ef-d46541c727c1",
+        "outputId": "049063c0-471f-4966-ed7f-d47bcde95274",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -395,7 +395,7 @@
       ],
       "metadata": {
         "id": "EOtdYsT9m5_R",
-        "outputId": "f4ce5621-76d3-4e8c-c0a4-f292a6afdb97",
+        "outputId": "1a0a0dc6-8ce7-49f5-f70d-a6892445f825",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -434,7 +434,7 @@
       ],
       "metadata": {
         "id": "9O780X1Spj7g",
-        "outputId": "bb858dd4-40eb-4f05-f024-993da3bfbca8",
+        "outputId": "52ed7beb-2cb0-4129-ce76-bfa7ac2022df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -505,7 +505,7 @@
       ],
       "metadata": {
         "id": "0K8vqQyFqiHG",
-        "outputId": "a058457a-ce66-4ddd-b7cd-c1de858096b7",
+        "outputId": "8be52b34-3944-4207-fae7-04299eaa99b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -581,7 +581,7 @@
       ],
       "metadata": {
         "id": "o2U5Fw96tLWj",
-        "outputId": "06b747a4-4679-4e3f-a9c9-8288af8cd5f7",
+        "outputId": "592ef74a-f6f5-471b-a66c-6f1442e2a8e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -645,7 +645,7 @@
       ],
       "metadata": {
         "id": "9VnF8htTmng4",
-        "outputId": "0f410dad-1f6d-4b95-990c-11098e48dce2",
+        "outputId": "3ab48420-eb84-462b-df8f-5dfdba41da45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -680,7 +680,7 @@
       ],
       "metadata": {
         "id": "Cxw0Q9IEm-iJ",
-        "outputId": "a86a69e8-07f2-4347-bb39-f2258d954512",
+        "outputId": "9c29b1f9-c802-470b-8db2-23c5ec4f47b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -707,7 +707,7 @@
       ],
       "metadata": {
         "id": "NxFWwJLCnBKd",
-        "outputId": "6911bd92-d5f2-46df-90a5-d0b1bc5c4db5",
+        "outputId": "2b693125-24e1-4df6-84d4-5fadefc43bdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -753,9 +753,92 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s leave the Sequential model aside for now and build a model class again."
+      ],
       "metadata": {
         "id": "On1OaMBqnl5l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CNN(nn.Module):\n",
+        "  def __init__(self, n_feature, p=0.0):\n",
+        "    super(CNN, self).__init__()\n",
+        "\n",
+        "    self.n_feature = n_feature\n",
+        "    self.p = p\n",
+        "\n",
+        "    # Creates the convolution layers\n",
+        "    self.conv1 = nn.Conv2d(in_channels=3, out_channels=n_feature, kernel_size=3)\n",
+        "    self.conv2 = nn.Conv2d(in_channels=n_feature, out_channels=n_feature, kernel_size=3)\n",
+        "\n",
+        "    # Creates the linear layers\n",
+        "    self.fc1 = nn.Linear(n_feature * 5 * 5, 50)\n",
+        "    self.fc2 = nn.Linear(50, 3)\n",
+        "\n",
+        "    # Creates dropout layers\n",
+        "    self.dropout = nn.Dropout(self.p)\n",
+        "\n",
+        "  def featurizer(self, x):\n",
+        "    # First convolutional block - 3@28x28 -> n_feature@26x26 -> n_feature@13x13\n",
+        "    x = self.conv1(x)\n",
+        "    x = F.relu(x)\n",
+        "    x = F.max_pool2d(x, kernel_size=2)\n",
+        "\n",
+        "    # Second convolutional block - n_feature * @13x13 -> n_feature@11x11 -> n_feature@5x5\n",
+        "    x = self.conv2(x)\n",
+        "    x = F.relu(x)\n",
+        "    x = F.max_pool2d(x, kernel_size=2)\n",
+        "\n",
+        "    # Input dimension (n_feature@5x5)\n",
+        "    # Output dimension (n_feature * 5 * 5)\n",
+        "    x = nn.Flatten()(x)\n",
+        "    return x\n",
+        "\n",
+        "  def classifier(self, x):\n",
+        "    # Hidden Layer\n",
+        "    # Input dimension (n_feature * 5 * 5)\n",
+        "    # Output dimension (50)\n",
+        "    if self.p > 0:\n",
+        "      x = self.dropout(x)\n",
+        "    x = self.fc1(x)\n",
+        "    x = F.relu(x)\n",
+        "\n",
+        "    # Output Layer\n",
+        "    # Input dimension (50)\n",
+        "    # Output dimension (3)\n",
+        "    if self.p > 0:\n",
+        "      x = self.dropout(x)\n",
+        "    x = self.fc2(x)\n",
+        "    return x\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = self.featurizer(x)\n",
+        "    x = self.classifier(x)\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "sfhWjLZknU3z"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Dropout"
+      ],
+      "metadata": {
+        "id": "Tb-ieAysrUL6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "VpiORRVBrVN5"
       }
     }
   ]
