--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmdLnQaY6yqs0OvNT+AypS",
+      "authorship_tag": "ABX9TyOXkL4Py8kEMwry8THJyL0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "id": "sJOR-0hwlwr7",
         "outputId": "f0c26b32-6494-48d2-c676-8e80a0a398ea"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -117,7 +117,7 @@
         "id": "wlXOl_Holz6M",
         "outputId": "b1226a39-f0e4-4f23-e35c-a5241812f6d0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "iDxyNz9iEDxw"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
       "metadata": {
         "id": "6VReWpJ_e1_S"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "3gC8jtMYksM3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
       "metadata": {
         "id": "Hn42s4lmp7xi"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +587,7 @@
           "height": 173
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -650,7 +650,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,7 +822,7 @@
       "metadata": {
         "id": "sfhWjLZknU3z"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,10 +836,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Dropout is an important piece of deep learning models. It is used as a regularizer;\n",
+        "that is, it tries to prevent overfitting by forcing the model to find more than one\n",
+        "way to achieve the target.\n",
+        "\n",
+        "The whole thing looks a lot like the randomization of features used in random\n",
+        "forests to perform the splits. Each tree, or even better, each split has access to a\n",
+        "subset of features only.\n",
+        "\n",
+        "How does this, \"feature randomization\", work in a deep learning\n",
+        "model?\n",
+        "\n",
+        "To illustrate it, let’s build a sequential model with a single `nn.Dropout` layer:"
+      ],
       "metadata": {
         "id": "VpiORRVBrVN5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dropping_model = nn.Drop"
+      ],
+      "metadata": {
+        "id": "QTP6DzzJtqUb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
