--- a/deep-learning-fundamentals/unit04-multilayer-networks/2_pytorch_mlp_mnist.ipynb
+++ b/deep-learning-fundamentals/unit04-multilayer-networks/2_pytorch_mlp_mnist.ipynb
@@ -17,7 +17,7 @@
         "id": "d71bce70-9dc3-448b-9f9a-8896e83b6d09"
       },
       "source": [
-        "# Implementing a Multilayer Perceptron (MNIST)"
+        "## Implementing a Multilayer Perceptron (MNIST)"
       ]
     },
     {
@@ -37,6 +37,7 @@
         "from torchvision import datasets, transforms\n",
         "\n",
         "import torch\n",
+        "import torch.nn.functional as F\n",
         "from torch.utils.data.dataset import random_split\n",
         "\n",
         "from collections import Counter\n",
@@ -50,7 +51,7 @@
         "id": "P-OJ-q2eBreE"
       },
       "id": "P-OJ-q2eBreE",
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -93,11 +94,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
       "metadata": {
         "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
-        "outputId": "7e708274-b631-4585-84da-daaac5a2ba74",
+        "outputId": "12852854-149a-4f1d-fec0-7c94d40bc6c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -111,7 +112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ],
       "source": [
@@ -120,11 +121,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
       "metadata": {
         "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
-        "outputId": "064443c9-f2c6-41b8-cd5d-32dd2e156885",
+        "outputId": "83a51c4e-91ba-47ac-ce1d-bd80f3f6df41",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -138,7 +139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ],
       "source": [
@@ -157,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c",
       "metadata": {
         "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c"
@@ -170,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae",
       "metadata": {
         "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae"
@@ -208,11 +209,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "b14d9f95-d7ee-431f-85fa-ee4ec1a9302b",
       "metadata": {
         "id": "b14d9f95-d7ee-431f-85fa-ee4ec1a9302b",
-        "outputId": "b0f23e0f-6e50-4ecf-d520-05bf6a9d4a38",
+        "outputId": "ea544de5-1a3c-4158-afd6-958eea28f7f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -271,11 +272,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "id": "36a879c3-0c84-4476-a79a-f41d897c696a",
       "metadata": {
         "id": "36a879c3-0c84-4476-a79a-f41d897c696a",
-        "outputId": "fb26e747-3540-4500-9f51-d600bae7bef0",
+        "outputId": "04331e33-50ab-48c5-eb7e-a07585813dff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -312,11 +313,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "d1de5f76-7547-4edf-938d-615195fe949f",
       "metadata": {
         "id": "d1de5f76-7547-4edf-938d-615195fe949f",
-        "outputId": "2ad99188-2d48-44d5-e578-b4170c5873fc",
+        "outputId": "e19ec10e-7b16-4895-b262-a245ee85ca12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
@@ -351,6 +352,274 @@
         "    (1, 2, 0)))\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5) Implementing the model"
+      ],
+      "metadata": {
+        "id": "EjPY1kdhHpzX"
+      },
+      "id": "EjPY1kdhHpzX"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "images.shape # batchsize, channel, height, width"
+      ],
+      "metadata": {
+        "id": "RzbOGCuvHqQg",
+        "outputId": "a221af60-2143-4e5a-dce0-dc72309a32b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "RzbOGCuvHqQg",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([64, 1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-fundamentals/unit04-multilayer-networks/images/mnist-reshape.png?raw=1)"
+      ],
+      "metadata": {
+        "id": "-jAEYVhwH_li"
+      },
+      "id": "-jAEYVhwH_li"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.flatten(images, start_dim=1).shape  # batchsize, features"
+      ],
+      "metadata": {
+        "id": "IBXWMZUYJ4RE",
+        "outputId": "20519e9f-e6c6-4718-db7f-7dae9e97f839",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "IBXWMZUYJ4RE",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([64, 784])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PyTorchMLP(torch.nn.Module):\n",
+        "  def __init__(self, num_features, num_classes):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.all_layers = torch.nn.Sequential(\n",
+        "      # 1st hidden layer\n",
+        "      torch.nn.Linear(num_features, 50),\n",
+        "      torch.nn.ReLU(),\n",
+        "      # 2nd hidden layer\n",
+        "      torch.nn.Linear(50, 25),\n",
+        "      torch.nn.ReLU(),\n",
+        "      # output layer\n",
+        "      torch.nn.Linear(25, num_classes)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = torch.flatten(x, start_dim=1)\n",
+        "    logits = self.all_layers(x)\n",
+        "    return logits"
+      ],
+      "metadata": {
+        "id": "qRjfdCB0Kog-"
+      },
+      "id": "qRjfdCB0Kog-",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6) The training loop"
+      ],
+      "metadata": {
+        "id": "1O7LmciBL0ii"
+      },
+      "id": "1O7LmciBL0ii"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_accuracy(model, dataloader):\n",
+        "  model = model.eval()\n",
+        "\n",
+        "  correct = 0.0\n",
+        "  total_examples = 0\n",
+        "\n",
+        "  for idx, (features, labels) in enumerate(dataloader):\n",
+        "    with torch.inference_mode():\n",
+        "        logits = model(features)\n",
+        "\n",
+        "    predictions = torch.argmax(logits, dim=1)\n",
+        "\n",
+        "    compare = labels == predictions\n",
+        "    correct += torch.sum(compare)\n",
+        "    total_examples += len(compare)\n",
+        "\n",
+        "  return correct / total_examples"
+      ],
+      "metadata": {
+        "id": "3tg6mulPL5x9"
+      },
+      "id": "3tg6mulPL5x9",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(1)\n",
+        "model = PyTorchMLP(num_features=784, num_classes=10)\n",
+        "\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr=0.05)\n",
+        "\n",
+        "num_epochs = 10\n",
+        "\n",
+        "loss_list = []\n",
+        "train_acc_list, val_acc_list = [], []\n",
+        "for epoch in range(num_epochs):\n",
+        "  model = model.train()\n",
+        "  for batch_idx, (features, labels) in enumerate(train_loader):\n",
+        "    logits = model(features)\n",
+        "\n",
+        "    loss = F.cross_entropy(logits, labels)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if not batch_idx % 250:\n",
+        "        ### LOGGING\n",
+        "        print(\n",
+        "            f\"Epoch: {epoch+1:03d}/{num_epochs:03d}\"\n",
+        "            f\" | Batch {batch_idx:03d}/{len(train_loader):03d}\"\n",
+        "            f\" | Train Loss: {loss:.2f}\"\n",
+        "        )\n",
+        "    loss_list.append(loss.item())\n",
+        "\n",
+        "  train_acc = compute_accuracy(model, train_loader)\n",
+        "  val_acc = compute_accuracy(model, val_loader)\n",
+        "  print(f\"Train Acc {train_acc*100:.2f}% | Val Acc {val_acc*100:.2f}%\")\n",
+        "  train_acc_list.append(train_acc)\n",
+        "  val_acc_list.append(val_acc)"
+      ],
+      "metadata": {
+        "id": "RXxke0g8MTfw",
+        "outputId": "4ec506dc-5faa-472d-99d6-ff95150d8788",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "RXxke0g8MTfw",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 001/010 | Batch 000/860 | Train Loss: 2.34\n",
+            "Epoch: 001/010 | Batch 250/860 | Train Loss: 0.68\n",
+            "Epoch: 001/010 | Batch 500/860 | Train Loss: 0.29\n",
+            "Epoch: 001/010 | Batch 750/860 | Train Loss: 0.30\n",
+            "Train Acc 88.70% | Val Acc 88.22%\n",
+            "Epoch: 002/010 | Batch 000/860 | Train Loss: 0.36\n",
+            "Epoch: 002/010 | Batch 250/860 | Train Loss: 0.41\n",
+            "Epoch: 002/010 | Batch 500/860 | Train Loss: 0.44\n",
+            "Epoch: 002/010 | Batch 750/860 | Train Loss: 0.25\n",
+            "Train Acc 91.84% | Val Acc 91.12%\n",
+            "Epoch: 003/010 | Batch 000/860 | Train Loss: 0.28\n",
+            "Epoch: 003/010 | Batch 250/860 | Train Loss: 0.20\n",
+            "Epoch: 003/010 | Batch 500/860 | Train Loss: 0.18\n",
+            "Epoch: 003/010 | Batch 750/860 | Train Loss: 0.26\n",
+            "Train Acc 93.70% | Val Acc 92.84%\n",
+            "Epoch: 004/010 | Batch 000/860 | Train Loss: 0.18\n",
+            "Epoch: 004/010 | Batch 250/860 | Train Loss: 0.13\n",
+            "Epoch: 004/010 | Batch 500/860 | Train Loss: 0.26\n",
+            "Epoch: 004/010 | Batch 750/860 | Train Loss: 0.22\n",
+            "Train Acc 94.82% | Val Acc 93.62%\n",
+            "Epoch: 005/010 | Batch 000/860 | Train Loss: 0.12\n",
+            "Epoch: 005/010 | Batch 250/860 | Train Loss: 0.20\n",
+            "Epoch: 005/010 | Batch 500/860 | Train Loss: 0.08\n",
+            "Epoch: 005/010 | Batch 750/860 | Train Loss: 0.19\n",
+            "Train Acc 95.47% | Val Acc 94.44%\n",
+            "Epoch: 006/010 | Batch 000/860 | Train Loss: 0.28\n",
+            "Epoch: 006/010 | Batch 250/860 | Train Loss: 0.31\n",
+            "Epoch: 006/010 | Batch 500/860 | Train Loss: 0.25\n",
+            "Epoch: 006/010 | Batch 750/860 | Train Loss: 0.06\n",
+            "Train Acc 95.80% | Val Acc 94.60%\n",
+            "Epoch: 007/010 | Batch 000/860 | Train Loss: 0.07\n",
+            "Epoch: 007/010 | Batch 250/860 | Train Loss: 0.11\n",
+            "Epoch: 007/010 | Batch 500/860 | Train Loss: 0.11\n",
+            "Epoch: 007/010 | Batch 750/860 | Train Loss: 0.15\n",
+            "Train Acc 96.17% | Val Acc 95.10%\n",
+            "Epoch: 008/010 | Batch 000/860 | Train Loss: 0.11\n",
+            "Epoch: 008/010 | Batch 250/860 | Train Loss: 0.19\n",
+            "Epoch: 008/010 | Batch 500/860 | Train Loss: 0.06\n",
+            "Epoch: 008/010 | Batch 750/860 | Train Loss: 0.14\n",
+            "Train Acc 96.40% | Val Acc 94.88%\n",
+            "Epoch: 009/010 | Batch 000/860 | Train Loss: 0.15\n",
+            "Epoch: 009/010 | Batch 250/860 | Train Loss: 0.08\n",
+            "Epoch: 009/010 | Batch 500/860 | Train Loss: 0.18\n",
+            "Epoch: 009/010 | Batch 750/860 | Train Loss: 0.05\n",
+            "Train Acc 97.07% | Val Acc 95.42%\n",
+            "Epoch: 010/010 | Batch 000/860 | Train Loss: 0.04\n",
+            "Epoch: 010/010 | Batch 250/860 | Train Loss: 0.08\n",
+            "Epoch: 010/010 | Batch 500/860 | Train Loss: 0.18\n",
+            "Epoch: 010/010 | Batch 750/860 | Train Loss: 0.12\n",
+            "Train Acc 97.26% | Val Acc 95.66%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7) Evaluating the results"
+      ],
+      "metadata": {
+        "id": "WHPQpCq0M9Gx"
+      },
+      "id": "WHPQpCq0M9Gx"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "txqQ9iC-M9l_"
+      },
+      "id": "txqQ9iC-M9l_",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
