--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/03_better_convolutions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMbAIxOUuGpgTgHUnzmZCv",
+      "authorship_tag": "ABX9TyPGhqpn8SdJgWS4y7XxFby4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -862,7 +862,7 @@
       "metadata": {
         "id": "QTP6DzzJtqUb"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -888,7 +888,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +928,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1010,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1049,7 +1049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,7 +1085,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,7 +1132,7 @@
           "height": 289
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1176,7 +1176,7 @@
           "height": 237
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1218,10 +1218,46 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The configuration part is short and straightforward: We create a model, a loss\n",
+        "function, and an optimizer."
+      ],
       "metadata": {
         "id": "pZIN0BMD7Flv"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(13)\n",
+        "\n",
+        "model_cnn = CNN(n_feature=5, p=0.5)\n",
+        "multi_loss_fn = nn.CrossEntropyLoss(reduction=\"mean\")\n",
+        "optimizer_cnn = optim.Adam(model_cnn.parameters(), lr=3e-4)"
+      ],
+      "metadata": {
+        "id": "c7Z1rAuIqHdT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Once again, we use our StepByStep class to handle model training for us."
+      ],
+      "metadata": {
+        "id": "fCpfs2pa04UC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b600rp9I04uf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
