--- a/deep-learning-fundamentals/unit04-multilayer-networks/3_efficient_data_loaders.ipynb
+++ b/deep-learning-fundamentals/unit04-multilayer-networks/3_efficient_data_loaders.ipynb
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "a7888009",
       "metadata": {
         "id": "a7888009"
@@ -71,13 +71,45 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "\n",
+        "import os\n",
+        "import time\n",
+        "\n",
+        "from torch.utils.data import DataLoader\n",
+        "from torchvision import transforms\n",
+        "from torch.utils.data import Dataset\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "from PIL import Image"
       ],
       "metadata": {
         "id": "YNO7IJlGTL9W"
       },
       "id": "YNO7IJlGTL9W",
-      "execution_count": 5,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def viz_batch_images(batch):\n",
+        "  plt.figure(figsize=(8, 8))\n",
+        "  plt.axis(\"off\")\n",
+        "  plt.title(\"Training images\")\n",
+        "  plt.imshow(\n",
+        "      np.transpose(\n",
+        "          vutils.make_grid(batch[0][:64], padding=2, normalize=True), (1, 2, 0)\n",
+        "      )\n",
+        "  )\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "iE7tYlLuaVw1"
+      },
+      "id": "iE7tYlLuaVw1",
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -87,7 +119,7 @@
         "id": "027d4a5a"
       },
       "source": [
-        "## Data Preparation"
+        "##1) Data Preparation"
       ]
     },
     {
@@ -102,11 +134,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "51371d67",
       "metadata": {
         "id": "51371d67",
-        "outputId": "a901b627-bee5-4c81-c6d8-46b82accfdcc",
+        "outputId": "96bcb4e2-f490-455c-d681-5558e8352c95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -126,7 +158,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-905d9194-1779-4e59-99f4-5a5e7ab2ea1a\">\n",
+              "  <div id=\"df-54c7adfc-7056-4cbe-aaa6-79d6a8b469d7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -179,7 +211,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-905d9194-1779-4e59-99f4-5a5e7ab2ea1a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54c7adfc-7056-4cbe-aaa6-79d6a8b469d7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -230,12 +262,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-905d9194-1779-4e59-99f4-5a5e7ab2ea1a button.colab-df-convert');\n",
+              "          document.querySelector('#df-54c7adfc-7056-4cbe-aaa6-79d6a8b469d7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-905d9194-1779-4e59-99f4-5a5e7ab2ea1a');\n",
+              "          const element = document.querySelector('#df-54c7adfc-7056-4cbe-aaa6-79d6a8b469d7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -258,7 +290,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ],
       "source": [
@@ -268,11 +300,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "f6fadc1b",
       "metadata": {
         "id": "f6fadc1b",
-        "outputId": "e6fae737-7624-437c-a7a3-1681fd4f9a54",
+        "outputId": "5156c2b6-0a5a-40f4-a359-b1e4358d3112",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -292,7 +324,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b61485ce-d916-45d8-b9ad-934fbc331dd9\">\n",
+              "  <div id=\"df-2f2874a1-055c-4462-b342-7f53d17acd65\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,7 +377,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b61485ce-d916-45d8-b9ad-934fbc331dd9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f2874a1-055c-4462-b342-7f53d17acd65')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -396,12 +428,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b61485ce-d916-45d8-b9ad-934fbc331dd9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2f2874a1-055c-4462-b342-7f53d17acd65 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b61485ce-d916-45d8-b9ad-934fbc331dd9');\n",
+              "          const element = document.querySelector('#df-2f2874a1-055c-4462-b342-7f53d17acd65');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -424,7 +456,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ],
       "source": [
@@ -439,7 +471,7 @@
         "id": "4cec8fa8"
       },
       "source": [
-        "## Creating a validation split"
+        "##2) Creating a validation split"
       ]
     },
     {
@@ -454,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "id": "0bf77cda",
       "metadata": {
         "id": "0bf77cda"
@@ -474,11 +506,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "id": "78300c83",
       "metadata": {
         "id": "78300c83",
-        "outputId": "8538822b-985c-4d27-9fbd-19b33d30faec",
+        "outputId": "2642b4fd-27ea-4c3a-c91f-0e9e321dddf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -498,7 +530,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b04393f5-046a-4a2f-b968-669f65e06bec\">\n",
+              "  <div id=\"df-55a13c89-65e6-4db2-8e88-d6dbadeb1efb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -551,7 +583,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b04393f5-046a-4a2f-b968-669f65e06bec')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-55a13c89-65e6-4db2-8e88-d6dbadeb1efb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -602,12 +634,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b04393f5-046a-4a2f-b968-669f65e06bec button.colab-df-convert');\n",
+              "          document.querySelector('#df-55a13c89-65e6-4db2-8e88-d6dbadeb1efb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b04393f5-046a-4a2f-b968-669f65e06bec');\n",
+              "          const element = document.querySelector('#df-55a13c89-65e6-4db2-8e88-d6dbadeb1efb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -630,7 +662,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ],
       "source": [
@@ -639,11 +671,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "d1fc3aa6",
       "metadata": {
         "id": "d1fc3aa6",
-        "outputId": "d91d40f6-8bab-48e9-fe6f-8179140d4603",
+        "outputId": "fc143954-e102-410a-c92a-d2f1ff05afe2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -663,7 +695,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a5c7a5ff-344f-4a7e-bb84-4697da66b596\">\n",
+              "  <div id=\"df-03015dcd-d39c-40b4-9ef9-919b692cd46a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -716,7 +748,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5c7a5ff-344f-4a7e-bb84-4697da66b596')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-03015dcd-d39c-40b4-9ef9-919b692cd46a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -767,12 +799,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a5c7a5ff-344f-4a7e-bb84-4697da66b596 button.colab-df-convert');\n",
+              "          document.querySelector('#df-03015dcd-d39c-40b4-9ef9-919b692cd46a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a5c7a5ff-344f-4a7e-bb84-4697da66b596');\n",
+              "          const element = document.querySelector('#df-03015dcd-d39c-40b4-9ef9-919b692cd46a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -795,11 +827,205 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ],
       "source": [
         "df_new_val.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3) Defining the Dataset Class"
+      ],
+      "metadata": {
+        "id": "BaQbjHZPYVB6"
+      },
+      "id": "BaQbjHZPYVB6"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyDataset(Dataset):\n",
+        "\n",
+        "  def __init__(self, csv_path, img_dir, transform=None):\n",
+        "    df = pd.read_csv(csv_path)\n",
+        "\n",
+        "    self.img_dir = img_dir\n",
+        "    self.transform = transform\n",
+        "\n",
+        "    # based on DataFrame columns\n",
+        "    self.img_names = df[\"filepath\"]\n",
+        "    self.labels = df[\"label\"]\n",
+        "\n",
+        "  def __getitem__(self, index):\n",
+        "    img = Image.open(os.path.join(self.img_dir, self.img_names[index]))\n",
+        "\n",
+        "    if self.transform is not None:\n",
+        "      img = self.transform(img)\n",
+        "    \n",
+        "    label = self.labels[index]\n",
+        "    return img, label\n",
+        "    \n",
+        "  def __len__(self):\n",
+        "    return self.labels.shape[0]"
+      ],
+      "metadata": {
+        "id": "H4iYWACWYWX5"
+      },
+      "id": "H4iYWACWYWX5",
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4) Defining optional image transformations"
+      ],
+      "metadata": {
+        "id": "n30pzXZAasAY"
+      },
+      "id": "n30pzXZAasAY"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_transforms = {\n",
+        "  \"train\": transforms.Compose([\n",
+        "    transforms.Resize(32),\n",
+        "    transforms.RandomCrop((28, 28)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5), (0.5))  # normalize images to [-1, 1] range\n",
+        "  ]),\n",
+        "  \"test\": transforms.Compose([\n",
+        "    transforms.Resize(32),\n",
+        "    transforms.CenterCrop((28, 28)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5), (0.5))  # normalize images to [-1, 1] range\n",
+        "  ]),\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "0EFXzvJFatYj"
+      },
+      "id": "0EFXzvJFatYj",
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5) Defining the data loaders"
+      ],
+      "metadata": {
+        "id": "f_rxT0JVdSl8"
+      },
+      "id": "f_rxT0JVdSl8"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = MyDataset(\n",
+        "  csv_path=\"mnist-pngs/new_train.csv\",\n",
+        "  img_dir=\"mnist-pngs/\",\n",
+        "  transform=data_transforms[\"train\"]\n",
+        ")\n",
+        "\n",
+        "val_dataset = MyDataset(\n",
+        "  csv_path=\"mnist-pngs/new_val.csv\",\n",
+        "  img_dir=\"mnist-pngs/\",\n",
+        "  transform=data_transforms[\"test\"]\n",
+        ")\n",
+        "\n",
+        "test_dataset = MyDataset(\n",
+        "  csv_path=\"mnist-pngs/test.csv\",\n",
+        "  img_dir=\"mnist-pngs/\",\n",
+        "  transform=data_transforms[\"test\"]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "JGzStZi3dTr4"
+      },
+      "id": "JGzStZi3dTr4",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loader = DataLoader(\n",
+        "  dataset=train_dataset,\n",
+        "  batch_size=32,\n",
+        "  shuffle=True,\n",
+        "  drop_last=True,\n",
+        "  num_workers=2\n",
+        ")\n",
+        "\n",
+        "val_loader = DataLoader(\n",
+        "  dataset=val_dataset,\n",
+        "  batch_size=32,\n",
+        "  shuffle=False,\n",
+        "  num_workers=2\n",
+        ")\n",
+        "\n",
+        "test_loader = DataLoader(\n",
+        "  dataset=test_dataset,\n",
+        "  batch_size=32,\n",
+        "  shuffle=False,\n",
+        "  num_workers=2\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "igMYgWhteJ73"
+      },
+      "id": "igMYgWhteJ73",
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6) Testing the data loaders"
+      ],
+      "metadata": {
+        "id": "admjpHwKf6H2"
+      },
+      "id": "admjpHwKf6H2"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_epochs = 1\n",
+        "for epoch in range(num_epochs):\n",
+        "  for batch_idx, (x, y) in enumerate(train_loader):\n",
+        "    if batch_idx >= 3:\n",
+        "      break\n",
+        "    print(f\"Batch index: {batch_idx} | Batch size: {y.shape[0]} | x shape: {x.shape} | y shape: {y.shape}\")\n",
+        "\n",
+        "print(f\"Labels from current batch: {y}\")"
+      ],
+      "metadata": {
+        "id": "fHlQNFvwf703",
+        "outputId": "56f7e05c-897f-4238-ee8d-35fc424f56b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "fHlQNFvwf703",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Batch index: 0 | Batch size: 32 | x shape: torch.Size([32, 1, 28, 28]) | y shape: torch.Size([32])\n",
+            "Batch index: 1 | Batch size: 32 | x shape: torch.Size([32, 1, 28, 28]) | y shape: torch.Size([32])\n",
+            "Batch index: 2 | Batch size: 32 | x shape: torch.Size([32, 1, 28, 28]) | y shape: torch.Size([32])\n",
+            "Labels from current batch: tensor([7, 8, 6, 1, 0, 8, 0, 8, 2, 7, 4, 7, 9, 3, 9, 9, 0, 8, 3, 0, 8, 1, 0, 6,\n",
+            "        1, 4, 7, 0, 3, 9, 9, 3])\n"
+          ]
+        }
       ]
     }
   ],
