--- a/deep-learning-fundamentals/unit04-multilayer-networks/exercise_2_fashion-mnist.ipynb
+++ b/deep-learning-fundamentals/unit04-multilayer-networks/exercise_2_fashion-mnist.ipynb
@@ -17,7 +17,7 @@
         "id": "d71bce70-9dc3-448b-9f9a-8896e83b6d09"
       },
       "source": [
-        "# Implementing a Multilayer Perceptron (MNIST)"
+        "# Implementing a Multilayer Perceptron (Fashion-MNIST)"
       ]
     },
     {
@@ -63,7 +63,7 @@
         "id": "XdT7Pn1QVnhm"
       },
       "id": "XdT7Pn1QVnhm",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "f609024c-3eae-4ad5-8cb8-b95b403b7606",
       "metadata": {
         "id": "f609024c-3eae-4ad5-8cb8-b95b403b7606"
@@ -144,7 +144,7 @@
         "id": "31_-5RDlXdl2"
       },
       "id": "31_-5RDlXdl2",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         }
       },
       "id": "TEL3oe97bQbl",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
         }
       },
       "id": "NS-63TcBbay5",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "53652f7f-1327-4992-a78a-345921eeb854",
       "metadata": {
         "id": "53652f7f-1327-4992-a78a-345921eeb854"
@@ -256,7 +256,7 @@
         "id": "AWmOQXfIey21"
       },
       "id": "AWmOQXfIey21",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,12 +278,12 @@
         "id": "EYfZYwJBe4lh"
       },
       "id": "EYfZYwJBe4lh",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
       "metadata": {
         "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
       "metadata": {
         "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c",
       "metadata": {
         "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c"
@@ -360,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae",
       "metadata": {
         "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae"
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "971389a7-5424-4141-a3ee-9399eebbbb6a",
       "metadata": {
         "id": "971389a7-5424-4141-a3ee-9399eebbbb6a"
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "8de213fc-48b0-4f7c-af9e-8e2da068e351",
       "metadata": {
         "id": "8de213fc-48b0-4f7c-af9e-8e2da068e351"
@@ -468,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "3dcaa2b1-4019-4128-9ff5-6a966c3abdf2",
       "metadata": {
         "id": "3dcaa2b1-4019-4128-9ff5-6a966c3abdf2",
@@ -658,6 +658,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
