--- a/deep-learning-fundamentals/unit05-lightning/01_mlp_with_lightning.ipynb
+++ b/deep-learning-fundamentals/unit05-lightning/01_mlp_with_lightning.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-fundamentals/unit04-multilayer-networks/helper_plotting.py"
+        "!wget https://github.com/Lightning-AI/dl-fundamentals/raw/main/unit05-lightning/5.2-mlp-lightning/shared_utilities.py"
       ],
       "metadata": {
         "id": "dVSgXwLEEZne"
@@ -56,7 +56,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "source": [
+        "!pip install torch torchvision torchaudio\n",
+        "!pip install lightning"
+      ],
+      "metadata": {
+        "id": "LrWh_RLXpB_g"
+      },
+      "id": "LrWh_RLXpB_g",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!lightning --version"
+      ],
+      "metadata": {
+        "id": "XOBSuHrLtg3m",
+        "outputId": "8886bc25-5cf2-4089-c486-09b215ced7d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "XOBSuHrLtg3m",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "lightning, version 2.0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
       "id": "bc4fa295-5c62-4888-bcf8-d07d6a7afc47",
       "metadata": {
         "id": "bc4fa295-5c62-4888-bcf8-d07d6a7afc47"
@@ -70,14 +107,15 @@
         "from torchvision import datasets, transforms\n",
         "import torch.nn.functional as F\n",
         "\n",
+        "import lightning as L\n",
+        "\n",
         "import numpy as np\n",
         "from collections import Counter\n",
         "\n",
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from helper_plotting import plot_training_loss\n",
-        "from helper_plotting import plot_accuracy"
+        "from shared_utilities import PyTorchMLP, compute_accuracy, get_dataset_loaders"
       ]
     },
     {
@@ -120,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
       "metadata": {
         "id": "6661307a-6220-48d5-b965-4cd36e29e54c",
@@ -147,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
       "metadata": {
         "id": "78adc94e-5418-4aac-9a82-9a9cbf8fc688",
@@ -184,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c",
       "metadata": {
         "id": "b39a42a2-cd46-46cf-ba93-d3f2f232f29c"
@@ -198,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae",
       "metadata": {
         "id": "b30e4a70-55b3-4fb0-b28d-b0fddd193fae"
@@ -268,7 +306,7 @@
         "outputId": "11002797-4ea6-44e0-ebe3-15dd297eeb95"
       },
       "id": "ZvndO8tAa6ON",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +352,7 @@
         "outputId": "4be078da-7250-4ee7-e845-7e91cbea0833"
       },
       "id": "RuGNCwXPbLPI",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +399,7 @@
         "outputId": "0133bce9-e4d9-41ed-b9ab-f8efb322d792"
       },
       "id": "OnBXXCJ0c9eF",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
